--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
     {% block corecss %}
         <!-- Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -33,7 +34,21 @@
   </head>
 
   <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="top-nav container-fluid fixed-top">
+
+      <div class="row">
+        <div class="col-0 col-md-1 col-lg-2"></div>
+        <div class="col-12 col-md-4 col-lg-3">Search</div>
+        <div class="col-12 col-md-3 col-lg-3">Guitar Vault Logo</div>
+        <div class="col-12 col-md-3 col-lg-2">
+          <a href="">Join</a>
+          <a href="">Log In</a>
+        </div>
+        <div class="col-md-1 col-lg-2"></div>
+      </div> <!--close upper nav row -->
+    </div> <!--close top nav container -->
+    </header>
+
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
