--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,11 @@
     {% block corecss %}
         <!-- Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!--Fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+        <!--Base.css-->
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
@@ -34,21 +39,21 @@
   </head>
 
   <body>
-    <header class="top-nav container-fluid fixed-top">
-
+    <header class="base-nav container-fluid fixed-top">
       <div class="row">
-        <div class="col-0 col-md-1 col-lg-2"></div>
-        <div class="col-12 col-md-4 col-lg-3">Search</div>
-        <div class="col-12 col-md-3 col-lg-3">Guitar Vault Logo</div>
-        <div class="col-12 col-md-3 col-lg-2">
+        <div class="col align-self-start">
+          <!--EMPTY BY DESIGN - POSSIBLE FUTURE USEAGE-->
+        </div>
+        <div class="col align-self-center text-center">
+          <h1 class="logo-txt">Guitar Vault</h1>
+        </div>
+        <div class="col align-self-end text-end">
           <a href="">Join</a>
           <a href="">Log In</a>
         </div>
-        <div class="col-md-1 col-lg-2"></div>
-      </div> <!--close upper nav row -->
-    </div> <!--close top nav container -->
-    </header>
-
+      </div> <!--close base-nav row -->
+    </header><!--close base-nav container -->
+   
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
