--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -72,6 +72,6 @@
     <!--Search Form-->
     <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-search ivory-txt" type="submit">Search</button>
     </form> <!--Close Search Form-->
 </div> <!--Close Search Form-->
