--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,6 +62,20 @@ body {
     color:var(--ivory);
 }
 
+/* Override Bootstrap default nav background */   
+.bg-dark {
+    --bs-bg-opacity: 0;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: var(--ivory);
+}
+
+.navbar-toggler-icon {
+    background-color:var(--off-black);
+    border: 1px solid var(--off-gold);
+}
+
 /* relocate dropdown icon below text */
 .dropdown .dropdown-toggle::after {
     transform: translate(-35px, 16px);
@@ -72,7 +86,7 @@ body {
 .dropdown .dropdown-toggle:active  {
     color:var(--ivory);
     font-weight: bold;
-    background-color: black;
+    background-color: var(--black);
     background: url('/media/gold-texture.jpg');
     background-size: cover;
     -webkit-text-fill-color: transparent;
@@ -81,9 +95,11 @@ body {
     background-clip:text;
 }
 
+
+
 .dropdown-menu {
     background-color: var(--black);
-    border: 1px solid;
+    border: 2px solid var(--off-gold);
 }
 
 /*--Buttons --*/
