--- a/templates/base.html
+++ b/templates/base.html
@@ -59,13 +59,14 @@
         </div>  <!--close Top Nav row -->
 
         <!--Lower Nav Row -->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
-            {% include 'includes/main-nav.html' %}
+            {% include 'includes/desktop-nav-items.html' %}
+           
 
           </div>
         </nav><!--close Lower Nav row -->
