--- a/templates/includes/mobile-nav-items.html
+++ b/templates/includes/mobile-nav-items.html
@@ -1,77 +1,6 @@
-<!--Appends to BaseNav (base.html)-->
-<div class="collapse navbar-collapse nav-fill w-100" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto nav-fill w-100">
-        
-        <!--About Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            About
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Item 1</a></li>
-            <li><a class="dropdown-item" href="#">Item 2</a></li>
-            <li><a class="dropdown-item" href="#">Item 3</a></li>
-        </ul>
-        </li>  <!--Close About Menu-->
-
-
-        <!--Guitars Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Guitars
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Electric</a></li>
-            <li><a class="dropdown-item" href="#">Bass</a></li>
-        </ul>
-        </li> <!--Close Guitars Menu-->
- 
-        <!--Amps Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Amps
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Amp Cat 1</a></li>
-            <li><a class="dropdown-item" href="#">Amp Cat 2</a></li>
-            <li><a class="dropdown-item" href="#">Amp Cat 3</a></li>
-        </ul>
-        </li> <!--Close Amps Menu-->
-
-        <!--Pedals Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Pedals
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Overdive</a></li>
-            <li><a class="dropdown-item" href="#">Item 2</a></li>
-            <li><a class="dropdown-item" href="#">Item 3</a></li>
-        </ul>
-        </li> <!--Close Pedals Menu-->
-
-        <!--Brands Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Brands
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Item 1</a></li>
-            <li><a class="dropdown-item" href="#">Item 2</a></li>
-            <li><a class="dropdown-item" href="#">Item 3</a></li>
-        </ul>
-        </li> <!--Close Brands Menu-->
-
-    </ul> <!--Close Nav Dropdown Menus-->
-
-    <!--Search Form-->
-    <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-search ivory-txt" type="submit">Search</button>
-    </form> <!--Close Search Form-->
-</div> <!--Close Search Form-->
+<div class="col-6 align-self-end text-end my-auto d-block d-md-none">
+    <ul class="list-inline list-unstyled">
+      <li class="list-inline-item" href="#">Join</li>
+      <li class="list-inline-item" href="#">Log In</li>
+    </ul>
+  </div>
