--- a/templates/base.html
+++ b/templates/base.html
@@ -44,13 +44,13 @@
       <div class="container-lg">
       <!--Top Nav Row (Logo, Title and Profile / LogIn / Join)-->
         <div class="row">
-          <div class="col-0 col-md-3 align-self-start my-auto py-2">
+          <div class="col-0 col-md-3 align-self-start my-auto py-2 d-none d-md-block">
             <img class="navbar-logo" src="/media/GV-Logo.png" href="#"/>
           </div>
-          <div class="col-7 col-md-6 align-self-center text-center my-auto">
+          <div class="col-12 col-md-6 align-self-center text-center my-auto">
             <h1 class="logo-txt gold-txt display-1" href="#">Guitar Vault</h1>
           </div>
-          <div class="col-5 col-md-3 align-self-end text-end my-auto">
+          <div class="col-0 col-md-3 align-self-end text-end my-auto d-none d-md-block">
             <ul class="list-inline list-unstyled">
               <li class="list-inline-item" href="#">Join</li>
               <li class="list-inline-item" href="#">Log In</li>
@@ -59,13 +59,13 @@
         </div>  <!--close Top Nav row -->
 
         <!--Lower Nav Row -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
           <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav-items" aria-controls="main-nav-items" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-
-            {% include 'includes/desktop-nav-items.html' %}
+            {% include 'includes/mobile-nav-items.html' %}
+            {% include 'includes/main-nav-items.html' %}
            
 
           </div>
