--- a/templates/includes/main-nav-items.html
+++ b/templates/includes/main-nav-items.html
@@ -1,13 +1,13 @@
 <!--Appends to BaseNav (base.html)-->
-<div class="collapse navbar-collapse nav-fill w-100" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto nav-fill w-100">
+<div class="collapse navbar-collapse " id="main-nav-items">
+    <ul class="navbar-nav mb-2 mb-lg-0 nav-fill w-100">
         
         <!--About Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             About
         </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Item 1</a></li>
             <li><a class="dropdown-item" href="#">Item 2</a></li>
@@ -17,8 +17,8 @@
 
 
         <!--Guitars Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Guitars
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -29,8 +29,8 @@
         </li> <!--Close Guitars Menu-->
  
         <!--Amps Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Amps
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -42,8 +42,8 @@
         </li> <!--Close Amps Menu-->
 
         <!--Pedals Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Pedals
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -55,8 +55,8 @@
         </li> <!--Close Pedals Menu-->
 
         <!--Brands Dropdown Menu-->
-        <li class="nav-item dropdown d-flex">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Brands
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
