--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,6 +11,7 @@
     --black: rgb(0,0,0);
     --off-black: rgb(65,74,76);
     --off-gold: rgb(195, 163, 67);
+    --transp: rgba(0,0,0,0);
     
 }
 
@@ -103,16 +104,32 @@ body {
 }
 
 /*--Buttons ---------------------------------*/
-.btn-search {
+.btn-search,
+.search-input {
     border: 3px solid var(--ivory);
 }
 
+.search-input {
+    background-color: var(--ivory);
+}
+
+.input-group {
+    border: 3px solid var(--transp);
+}
+
+.input-group:hover,
+.input-group:focus,
+.input-group:active,
 .btn-search:hover,
 .btn-search:focus,
-.btn-search:active {
+.btn-search:active,
+.search-input:hover,
+.search-input:focus,
+.search-input:active {
     border: 3px solid var(--off-gold);
     color: var(--off-gold);
 }
+
 
 /*----Footer----------------------------------*/
 
