--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,9 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col main-content-col my-auto">
-                <h1>Welcome to the Guitar Vault</h1>
+                <h1 class="gold-txt">Welcome to the Guitar Vault</h1>
+
+                
             </div>
         </div>
     </div>
