--- a/templates/base.html
+++ b/templates/base.html
@@ -56,27 +56,64 @@
             <h1 class="logo-txt gold-txt display-1">
               <a href="{% url 'home' %}">Guitar Vault</a></h1>
           </div>
-          <div class="col-0 col-md-3 align-self-end text-end my-auto d-none d-md-block">
-            <ul class="list-inline list-unstyled">
-              <li class="list-inline-item" href="#">Join</li>
-              <li class="list-inline-item" href="#">Log In</li>
-            </ul>
-          </div>
+
+          <!--Profile -->
+          <div class="col-0 d-none col-md-3 d-md-block align-self-end text-end my-auto mb-5">
+            
+            {% if request.user.is_authenticated %}
+              <div class="d-flex">  
+                <div class="dropdown" id="user-profile-dropdown">
+                  <a class="dropdown-toggle gold-accent-txt" href="#" role="button" id="user-profile-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div class="text-center">
+                          <div><i class="fas fa-user fa-lg"></i></div>
+                          <h5 class="my-0">My Account</h5>
+                      </div>
+                  </a>
+                  <!--Embedded dropdown menu-->
+                  <ul class="dropdown-menu" aria-labelledby="user-profile-options">
+                    {% if request.user.is_superuser %}
+                      <li><a class="dropdown-item gold-accent-txt" href="#">
+                        Site Admin</a></li>
+                    {% endif %}  
+                    <li><a class="dropdown-item gold-accent-txt" href="#">
+                      My Profile</a></li>
+                    <li><a class="dropdown-item gold-accent-txt" href="#">
+                      Log Out</a></li>
+                  </ul>
+                </div> <!--Close Embedded dropdown menu-->
+               
+                <div class="mt-0">
+                  
+                  <!--Temporary icon to be replaced with icon identifying user's membership tier-->
+                  <i class="fas fa-certificate"></i>
+                  
+                </div>
+              </div> 
+                      
+            {% else %}
+              <ul class="list-inline list-unstyled">
+                <li class="list-inline-item gold-accent-txt" href="#"><h4>Join</h4></li>
+                <li class="vr"></li>
+                <li class="list-inline-item gold-accent-txt" href="#"><h4>Log In</h4></li>
+              </ul>
+            {% endif %}
+          </div> <!--close Profile col-->
+
         </div>  <!--close Top Nav row -->
 
         <!--Lower Nav Row -->
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav-items" aria-controls="main-nav-items" aria-expanded="false" aria-label="Toggle navigation">
+          <div class="container-fluid ps-0 pe-0">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
+
+            
             {% include 'includes/mobile-nav-items.html' %}
             {% include 'includes/main-nav-items.html' %}
-           
-
+          
           </div>
-        </nav><!--close Lower Nav row -->
-
+        </nav>  <!--close Lower Nav row -->
       </div>    <!--close lg-container -->
     </header>   <!--close nav-banner container -->
    
