Created all guitars view and url, added page header to html templates to push body conent down which was hidden by navbar

--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -15,7 +15,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col main-content-col my-auto">
-                <h1 class="gold-txt">Welcome to the Guitar Vault</h1>
+                {{ guitars }}}}
 
                 
             </div>
