--- a/templates/base.html
+++ b/templates/base.html
@@ -44,79 +44,81 @@
   </head>
 
   <body>
-    <header class="nav-banner container-fluid fixed-top">
-      <!--Nested container to allow full width banner but constrain max width of content-->
-      <div class="container-lg">
-      <!--Top Nav Row (Logo, Title and Profile / LogIn / Join)-->
-        <div class="row">
-          <div class="col-0 col-md-3 align-self-start my-auto py-2 d-none d-md-block">
-            <img class="navbar-logo" src="/media/GV-Logo.png"/>
-          </div>
-          <div class="col-12 col-md-6 align-self-center text-center my-auto">
-            <h1 class="logo-txt gold-txt display-1">
-              <a href="{% url 'home' %}">Guitar Vault</a></h1>
-          </div>
+    {% block header %}
+      <header class="nav-banner container-fluid fixed-top">
+        <!--Nested container to allow full width banner but constrain max width of content-->
+        <div class="container-lg">
+        <!--Top Nav Row (Logo, Title and Profile / LogIn / Join)-->
+          <div class="row">
+            <div class="col-0 col-md-3 align-self-start my-auto py-2 d-none d-md-block">
+              <img class="navbar-logo" src="/media/GV-Logo.png"/>
+            </div>
+            <div class="col-12 col-md-6 align-self-center text-center my-auto">
+              <h1 class="logo-txt gold-txt display-1">
+                <a href="{% url 'home' %}">Guitar Vault</a></h1>
+            </div>
 
-          <!--Profile -->
-          <div class="col-0 d-none col-md-3 d-md-block align-self-end text-end my-auto mb-5">
-            
-            {% if request.user.is_authenticated %}
-              <div class="d-flex">  
-                <div class="dropdown" id="user-profile-dropdown">
-                  <a class="dropdown-toggle gold-accent-txt" href="#" role="button" id="user-profile-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <div class="text-center">
-                          <div><i class="fas fa-user fa-lg"></i></div>
-                          <h5 class="my-0">My Account</h5>
-                      </div>
-                  </a>
-                  <!--Embedded dropdown menu-->
-                  <ul class="dropdown-menu" aria-labelledby="user-profile-options">
-                    {% if request.user.is_superuser %}
+            <!--Profile -->
+            <div class="col-0 d-none col-md-3 d-md-block align-self-end text-end my-auto mb-5">
+              
+              {% if request.user.is_authenticated %}
+                <div class="d-flex">  
+                  <div class="dropdown" id="user-profile-dropdown">
+                    <a class="dropdown-toggle gold-accent-txt" href="#" role="button" id="user-profile-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="text-center">
+                            <div><i class="fas fa-user fa-lg"></i></div>
+                            <h5 class="my-0">My Account</h5>
+                        </div>
+                    </a>
+                    <!--Embedded dropdown menu-->
+                    <ul class="dropdown-menu" aria-labelledby="user-profile-options">
+                      {% if request.user.is_superuser %}
+                        <li><a class="dropdown-item gold-accent-txt" href="#">
+                          Site Admin</a></li>
+                      {% endif %}  
                       <li><a class="dropdown-item gold-accent-txt" href="#">
-                        Site Admin</a></li>
-                    {% endif %}  
-                    <li><a class="dropdown-item gold-accent-txt" href="#">
-                      My Profile</a></li>
-                    <li><a class="dropdown-item gold-accent-txt" href="{% url 'account_logout' %}">
-                      Log Out</a></li>
-                  </ul>
-                </div> <!--Close Embedded dropdown menu-->
-               
-                <div class="mt-0">
-                  
-                  <!--Temporary icon to be replaced with icon identifying user's membership tier-->
-                  <i class="fas fa-certificate"></i>
-                  
-                </div>
-              </div> 
-                      
-            {% else %}
-              <ul class="list-inline list-unstyled">
-                <li class="list-inline-item gold-accent-txt" href="{% url 'account_signup' %}"><h4>Join</h4></li>
-                <li class="vr"></li>
-                <li class="list-inline-item gold-accent-txt" href="{% url 'account_login' %}"><h4>Log In</h4></li>
-              </ul>
-            {% endif %}
-          </div> <!--close Profile col-->
+                        My Profile</a></li>
+                      <li><a class="dropdown-item gold-accent-txt" href="{% url 'account_logout' %}">
+                        Log Out</a></li>
+                    </ul>
+                  </div> <!--Close Embedded dropdown menu-->
+                
+                  <div class="mt-0">
+                    
+                    <!--Temporary icon to be replaced with icon identifying user's membership tier-->
+                    <i class="fas fa-certificate"></i>
+                    
+                  </div>
+                </div> 
+                        
+              {% else %}
+                <ul class="list-inline list-unstyled">
+                  <li class="list-inline-item gold-accent-txt" href="{% url 'account_signup' %}"><h4>Join</h4></li>
+                  <li class="vr"></li>
+                  <li class="list-inline-item gold-accent-txt" href="{% url 'account_login' %}"><h4>Log In</h4></li>
+                </ul>
+              {% endif %}
+            </div> <!--close Profile col-->
 
-        </div>  <!--close Top Nav row -->
+          </div>  <!--close Top Nav row -->
 
-        <!--Lower Nav Row -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-          <div class="container-fluid ps-0 pe-0">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+          <!--Lower Nav Row -->
+          <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+            <div class="container-fluid ps-0 pe-0">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
 
+              
+              {% include 'includes/mobile-nav-items.html' %}
+              {% include 'includes/main-nav-items.html' %}
             
-            {% include 'includes/mobile-nav-items.html' %}
-            {% include 'includes/main-nav-items.html' %}
-          
-          </div>
-        </nav>  <!--close Lower Nav row -->
-      </div>    <!--close lg-container -->
-    </header>   <!--close nav-banner container -->
-   
+            </div>
+          </nav>  <!--close Lower Nav row -->
+        </div>    <!--close lg-container -->
+      </header>   <!--close nav-banner container -->
+    {% endblock %}
+
     {% if messages %}
         <div class="message-container">
 
