Renamed dropdown selections to match new scope of site

--- a/templates/includes/main-nav-items.html
+++ b/templates/includes/main-nav-items.html
@@ -20,50 +20,45 @@
         <!--Guitars Dropdown Menu-->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <h4 class="mb-0">Guitars</h4>
+                <h4 class="mb-0">Electric</h4>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">All Guitars</a></li>
+                <li><a class="dropdown-item" href="#">All Electric Guitars</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Electric</a></li>
-                <li><a class="dropdown-item" href="#">Bass</a></li>
-                <li><a class="dropdown-item" href="#">Acoustic</a></li>
+                <li><a class="dropdown-item" href="#">Platinum</a></li>
+                <li><a class="dropdown-item" href="#">Gold</a></li>
+                <li><a class="dropdown-item" href="#">Silver</a></li>
+                <li><a class="dropdown-item" href="#">Bronze</a></li>
             </ul>
         </li> <!--Close Guitars Menu-->
  
         <!--Amps Dropdown Menu-->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <h4 class="mb-0">Amps</h4>
+                <h4 class="mb-0">Bass</h4>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">All Amps</a></li>
+                <li><a class="dropdown-item" href="#">All Bass Guitars</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Practice Amps (&lt;50Watts)</a></li>
-                <li><a class="dropdown-item" href="#">Heads</a></li>
-                <li><a class="dropdown-item" href="#">Combos</a></li>
+                <li><a class="dropdown-item" href="#">Platinum</a></li>
+                <li><a class="dropdown-item" href="#">Gold</a></li>
+                <li><a class="dropdown-item" href="#">Silver</a></li>
+                <li><a class="dropdown-item" href="#">Bronze</a></li>
             </ul>
         </li> <!--Close Amps Menu-->
 
         <!--Pedals Dropdown Menu-->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <h4 class="mb-0">Pedals</h4>
+                <h4 class="mb-0">Acoustic</h4>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">All Pedals</a></li>
+                <li><a class="dropdown-item" href="#">All Acoustic Guitars</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Pre-Amps</a></li>
-                <li><a class="dropdown-item" href="#">Drive / Distortion</a></li>
-                <li><a class="dropdown-item" href="#">Delay</a></li>
-                <li><a class="dropdown-item" href="#">Compression / Noise Gate</a></li>
-                <li><a class="dropdown-item" href="#">Filter</a></li>
-                <li><a class="dropdown-item" href="#">Modulation</a></li>
-                <li><a class="dropdown-item" href="#">Pitch</a></li>
-                <li><a class="dropdown-item" href="#">Reverb</a></li>
-                <li><a class="dropdown-item" href="#">Tremolo / Vibrato</a></li>
-                <li><a class="dropdown-item" href="#">Multi-FX</a></li>
-                <li><a class="dropdown-item" href="#">Utility (Expression, Volume, Buffers)</a></li>
+                <li><a class="dropdown-item" href="#">Platinum</a></li>
+                <li><a class="dropdown-item" href="#">Gold</a></li>
+                <li><a class="dropdown-item" href="#">Silver</a></li>
+                <li><a class="dropdown-item" href="#">Bronze</a></li>
             </ul>
         </li> <!--Close Pedals Menu-->
 
